# rust-confirm-email

./: Cargo.toml  LICENSE  README.md
.woodpecker/: post-merge-tag.yaml  pr.yaml
src/: lib.rs
src/benchmarks/: mod.rs
src/crypto/: mod.rs
src/error/: mod.rs
src/payload/: mod.rs
src/tests/: mod.rs
src/utils/: mod.rs
