[package]
name = "confirm-email"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.1"
description = """
A Rust crate for creating URL‑safe, encrypted email confirmation tokens with configurable expiry
(with precision to the second) and for validating them to retrieve the original email.
"""
authors = ["Federico Frigerio"]
license = "MIT"
keywords = ["email", "email-verification", "user-registration", "signup"]
categories = ["web-programming", "authentication"]
readme = "README.md"
repository = "https://github.com/FrostWalk/rust-confirm-email.git"
homepage = "https://github.com/FrostWalk/rust-confirm-email"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.41"
regex = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[lib]
name = "confirm_email"
path = "src/lib.rs"
test = true
doctest = true
doc = true
proc-macro = false
crate-type = ["lib"]
required-features = []
