[package]
name = "confirm-email"
version = "0.1.3"
edition = "2024"
rust-version = "1.85.1"
description = """
A Rust crate for creating URL‑safe, encrypted email confirmation tokens with configurable expiry
(with precision to the second) and for validating them to retrieve the original email.
"""
authors = ["Federico Frigerio"]
license = "MIT"
keywords = ["email", "email-verification", "user-registration", "signup"]
categories = ["web-programming", "authentication"]
readme = "README.md"
repository = "https://github.com/FrostWalk/rust-confirm-email.git"
homepage = "https://github.com/FrostWalk/rust-confirm-email"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lib]
name = "confirm_email"
path = "src/lib.rs"
test = true
doctest = true
doc = true
proc-macro = false
crate-type = ["lib"]
required-features = []
